changed namespace to FSharp.Control

--- a/src/AsyncSeq/paket.template
+++ b/src/AsyncSeq/paket.template
@@ -14,7 +14,7 @@ requireLicenseAcceptance
 copyright
     Copyright 2015
 tags
-    F#, async, fsharpx
+    F#, async, seq
 summary
     Asynchronous sequences for F#
 description
